...

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_map_black_24dp"
        android:title="@string/tabItem1" />
    <item
        android:id="@+id/navigation_list"
        android:icon="@drawable/ic_list_black_24dp"
        android:title="@string/tabItem2" />
    <item
        android:id="@+id/navigation_workmates"
        android:icon="@drawable/ic_group_black_24dp"
        android:title="@string/tabItem3" />
</menu>
