<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/profile_picture_workmate"
        android:layout_width="@dimen/profile_picture_workmates_width"
        android:layout_height="@dimen/profile_picture_workmates_height"
        android:layout_margin="@dimen/profile_picture_workmates_margin"
        android:src="@drawable/ic_no_image_available"/>

    <TextView
        android:id="@+id/workmates_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_workmates_margin"
        android:layout_toRightOf="@+id/profile_picture_workmate"
        android:layout_toLeftOf="@+id/pins_new_message"/>

    <include
        android:layout_alignParentRight="true"
        android:visibility="gone"
        android:layout_width="@dimen/profile_picture_workmates_width"
        android:layout_height="@dimen/profile_picture_workmates_height"
        android:layout_margin="@dimen/profile_picture_workmates_margin"
        layout="@layout/include_new_message" />


</RelativeLayout>